--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Flask==1.1.2
 Flask_Admin==1.6.1
 Flask_Bootstrap==3.3.7.1
 flask_sqlalchemy==3.0.5
+gunicorn==19.7.1
 pandas==1.2.4
 python-dotenv==0.21.1
 SQLAlchemy==1.4.46
