--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,7 +1,7 @@
-Flask==2.2.2
+Flask==2.2.2zx
 Flask_Admin==1.6.1
-Flask_Bootstrap==3.3.7.1
-flask_sqlalchemy==3.0.5
+Flask_Bootstrap==3.3.7
+flask_sqlalchemy==3.0.3
 gunicorn==19.7.1
 pandas==1.2.4
 python-dotenv==0.21.1
