--- a/src/environment.yml
+++ b/src/environment.yml
@@ -1,13 +1,19 @@
 name: pydrugdb
 channels:
+  - conda-forge
   - defaults
 dependencies:
+  - python=3.12.5
   - pip
   - pip:
-    - python-dotenv
-    - sqlalchemy
-    - flask
-    - flask-admin
-    - flask-sqlalchemy
-    - flask-bootstrap
-    - pandas
+    - flask==2.3.3
+    - flask-bootstrap5==0.1.dev1
+    - flask-bootstrap==3.3.7.1
+    - python-dotenv==1.0.0
+    - pandas==2.2.3
+    - boto3==1.28.64
+    - pytest==7.4.3
+    - wtforms==3.1.2
+    - numpy==2.2.6
+    - pytz==2024.2
+    - tzdata==2024.1
