--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,10 +1,20 @@
-Flask==2.2.2
-Flask_Admin==1.6.1
-Flask_Bootstrap==3.3.7
-flask_sqlalchemy==3.0.3
-gunicorn==19.7.1
-pandas==1.2.4
-pymysql==1.1.0
-python-dotenv==0.21.1
-SQLAlchemy==1.4.46
-WTForms==3.0.1
+Flask==2.3.3
+Flask-Bootstrap==3.3.7.1
+flask-bootstrap5==0.1.dev1
+python-dotenv==1.0.0
+pandas==2.2.3
+boto3==1.28.64
+botocore==1.31.85
+s3transfer==0.7.0
+jmespath==1.0.1
+urllib3==2.0.7
+pytest==7.4.3
+WTForms==3.1.2
+numpy==2.2.6
+pytz==2024.2
+tzdata==2024.1
+Werkzeug==3.0.3
+Jinja2==3.1.4
+click==8.1.7
+itsdangerous==2.2.0
+MarkupSafe==2.1.3 
